# automatic-ripping-machine

./: .abcde.conf  .codeclimate.yml  .codecov.yml  .dockerignore  .env.example  .env.remote-transcoder.example  .gitattributes  .gitignore  .gitmodules  .pylintrc  .release-please-manifest.json  .travis.yml  51-automedia.rules  Branch_Scope.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile-UI  Dockerfile.trixie  ISSUE_TEMPLATE.md  LICENSE  PR_PREPARATION_SUMMARY.md  README  README-OMDBAPI.txt  README.md  SECURITY.md  TODO.txt  VERSION  Vagrantfile  arm-ansible-playbook.yml  arm.yaml  arm@.service  arm_wrapper.sh  backend.requirements.txt  build.sh  config  config.sample  data_rip.sh  default.mmcp.xml  (+24 more)
api/: crud.py  (+6 more)
arm-neu/auth/: .gitignore  LICENSE  pyproject.toml
arm-neu/auth/src/arm_auth/: __init__.py  cli.py  db.py  models.py  passwords.py  scopes.py  service.py
arm-neu/auth/tests/: conftest.py  test_cli.py  test_db.py  test_fastapi_deps.py  test_models.py  test_passwords.py  test_scopes.py  test_service.py  test_tinyauth_sync.py
arm-neu/contracts/: .dockerignore  .gitignore  .release-please-manifest.json  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json  requirements-test.txt
arm-neu/contracts/.github/workflows/: gitleaks.yml  notify-consumers.yml  release-please.yml  test.yml
arm-neu/contracts/src/arm_contracts/: __init__.py  callback.py  enums.py  expected_title.py  job.py  job_config.py  media_metadata.py  notification_channel.py  notification_event.py  outbound_webhook_payload.py  overrides.py  progress.py  rsync.py  track.py  webhook.py
arm-neu/contracts/tests/: conformance.py  test_callback.py  test_enums.py  test_expected_title.py  test_job.py  test_job_config.py  test_media_metadata.py  test_notification_channel.py  test_notification_event.py  test_outbound_webhook_payload.py  test_overrides.py  test_progress_state.py  test_round_trip.py  test_rsync_parser.py  test_track_skip_reason.py  test_webhook.py
arm-neu/contracts/tests/fixtures/: apprise_channel.json  bash_channel.json  job_duplicate_detected_event.json  job_failed_event.json  job_manual_wait_required_event.json  job_rip_complete_event.json  (+8 more)
(+1714 files in other folders)
