[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arm-contracts"
version = "0.1.0"
description = "Shared Pydantic models for the ARM fork (arm-neu, transcoder, arm-ui)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
